objects/BMCServiceDesk__BMC_Chassis__c.object
<CustomObject>
    <fields>
        <fullName>BMCServiceDesk__Chassis_Type__c</fullName>
        <label>Chassis Type</label>
        <picklist>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unknown</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Desktop</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Low-profile desktop</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pizza box</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mini tower</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tower</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Portable</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Laptop</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Notebook</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hand-held</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Docking Station</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>All-in-one</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Subnotebook</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Space-saving</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lunch box</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Main system Chassis</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Expansion Chassis</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Subchassis</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bus-expansion Chassis</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Peripheral Chassis</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__InstanceID__c</fullName>
        <label>Instance ID</label>
        <length>38</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__Number_of_Power_Cords__c</fullName>
        <label>Number of Power Cords</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__Rack_Mountable__c</fullName>
        <label>Rack Mountable</label>
        <picklist>
            <picklistValues>
                <fullName>Unknown</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>True</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>False</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
</CustomObject>